# ohLLM

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ohllm/common/: file_reader.h  log.cc  log.h  macro.h  meta.h  to_string.h  type.h
ohllm/core/: data_type.cc  data_type.h  device.cc  device.h  quant.h  tensor.cc  tensor.h
ohllm/core/operator/: operator.cc  operator.h  operator_cpu.cc  operator_cpu.h
ohllm/model/: model_config.h  model_ctx.cc  model_ctx.h  state_dict.cc  state_dict.h
ohllm/model/model_loader/: model_loader.h  model_loader_gguf.cc
python/: convert-hf-to-gguf.py  convert_to_ggul.py
scripts/: build.sh
test/: CMakeLists.txt  test_temp.cpp
test/model/: test_model_loader_gguf.cpp
